force-app/main/default/objects/MUSW__Sequence_Range__c/MUSW__Sequence_Range__c.object-meta.xml
<CustomObject>
    <description>Range definitions for Sequence Numbers</description>
    <label>Sequence Range</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>