force-app/main/default/objects/MUSW__Sequence_Range__c/fields/MUSW__End__c.field-meta.xml
<CustomField>
    <fullName>MUSW__End__c</fullName>
    <label>End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>