force-app/main/default/objects/MUSW__Sequence_Range__c/fields/MUSW__Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sequence_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sequence Number</label>
    <referenceTo>MUSW__Sequence_Number__c</referenceTo>
    <relationshipLabel>Sequence Ranges</relationshipLabel>
    <relationshipName>Sequence_Ranges</relationshipName>
    <type>Lookup</type>
</CustomField>