force-app/main/default/objects/MUSW__Sequence_Range__c/fields/MUSW__Start__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Start__c</fullName>
    <label>Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>